--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vue Mastery</title>
-
+    <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
-
+    <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
   </head>
   <body>
@@ -17,7 +17,9 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <!-- solution -->
+            <img :class="{ 'out-of-stock-img': !inStock }" v-bind:src="image">
+            <!-- solution -->
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -31,18 +33,26 @@
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-              
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+              class="color-circle" 
+              :style="{ backgroundColor: variant.color }">
+            </div>
+            
+            <button 
+              class="button" 
+              :class="{ disabledButton: !inStock }" 
+              :disabled="!inStock" 
+              @click="addToCart">
+              Add to Cart
+            </button>
           </div>
         </div>
       </div>
     </div>
 
-
+    <!-- Import App -->
     <script src="./main.js"></script>
 
-
+    <!-- Mount App -->
     <script>
       const mountedApp = app.mount('#app')
     </script>
