--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
     </div>
 
-    <script src="./main.js"></script>
-
+    <script src="main.js"></script>
+<script src="./Components/ProductDetail.js"></script>
     <script src="./components/ProductDisplay.js"></script>
     <script src="./components/ReviewForm.js"></script>
     <script src="./components/ReviewList.js"></script>
