--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 
-    <script src="./components/ProductDisplay.js"></script>
-    <script src="./components/ReviewForm.js"></script>
-    <script src="./components/ReviewList.js"></script>
+    <script src="./ProductDisplay.js"></script>
+    <script src="./ReviewForm.js"></script>
+    <script src="./ReviewList.js"></script>
 
     <script>
       const mountedApp = app.mount('#app')
