--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <script src="main.js"></script>
 
-    <script src="./ProductDisplay.js"></script>
-    <script src="./ReviewForm.js"></script>
-    <script src="./ReviewList.js"></script>
+    <script src="ProductDisplay.js"></script>
+    <script src="ReviewForm.js"></script>
+    <script src="ReviewList.js"></script>
 
     <script>
       const mountedApp = app.mount('#app')
