--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     </div>
 
     <script src="main.js"></script>
-
-    <script src="ProductDisplay.js"></script>
-    <script src="ReviewForm.js"></script>
-    <script src="ReviewList.js"></script>
+    <script src="./Components/ProductDisplay.js"></script>
+    <script src="./Components/ReviewForm.js"></script>
+    <script src="./Components/ReviewList.js"></script>
 
     <script>
       const mountedApp = app.mount('#app')
