--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <script src="main.js"></script>
-    <script src="./Components/ProductDisplay.js"></script>
-    <script src="./Components/ReviewForm.js"></script>
-    <script src="./Components/ReviewList.js"></script>
+    <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
 
     <script>
       const mountedApp = app.mount('#app')
