--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vue Mastery</title>
-    <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
   </head>
   <body>
@@ -15,9 +15,9 @@
     </div>
 
     <script src="main.js"></script>
-    <script src="./components/ProductDisplay.js"></script>
-    <script src="./components/ReviewForm.js"></script>
-    <script src="./components/ReviewList.js"></script>
+    <script src="components/ProductDisplay.js"></script>
+    <script src="components/ReviewForm.js"></script>
+    <script src="components/ReviewList.js"></script>
 
     <script>
       const mountedApp = app.mount('#app')
